--- a/index.html
+++ b/index.html
@@ -3,16 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>简听 - 懒人听网页听小说的神器</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>便捷下载 - 方便快捷的跳转至应用下载</title>
 </head>
 
 <body>
-    <!--
- 
-    -->
-    <script src="https://s23.cnzz.com/z_stat.php?id=1275487845&web_id=1275487845" language="JavaScript"></script>
     <script type="text/javascript">
         //声明_czc对象:
         var _czc = _czc || [];
@@ -37,39 +31,36 @@
         }
 
         // 根据不同的终端，跳转到不同的地址
-        var theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+        var theUrl = 'https://itunes.apple.com/app/apple-store/id1444012539?pt=119070313&ct=WeChatOa&mt=8';
         if (Terminal.platform.android) {//安卓端
-            _czc.push(['_trackEvent', '简听', '下载', 'Android']);
-            document.write('“简听”安卓版APP开发中，敬请期待！');
-            //theUrl = 'https://itunes.apple.com/app/id1247266869';
-            //location.href = theUrl;
+            _czc.push(['_trackEvent', '未你', '下载', 'Android']);
+            theUrl = 'http://vili.aiyisheng.com.cn:81/ViliWeChatOa.apk';
+            location.href = theUrl;
         } else {
             if (Terminal.platform.iPhone) {//iPhone端
-                _czc.push(['_trackEvent', '简听', '下载', 'iPhone']);
-                theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                _czc.push(['_trackEvent', '未你', '下载', 'iPhone']);
+                theUrl = 'https://itunes.apple.com/app/apple-store/id1444012539?pt=119070313&ct=WeChatOa&mt=8';
             } else if (Terminal.platform.iPad) {//iPad端
-                _czc.push(['_trackEvent', '简听', '下载', 'iPad']);
+                _czc.push(['_trackEvent', '未你', '下载', 'iPad']);
                 // 还可以通过language，区分开多国语言版
                 switch (Terminal.language) {
                     case 'en-us'://iPad英文版APP Store地址
-                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        theUrl = 'https://itunes.apple.com/app/apple-store/id1444012539?pt=119070313&ct=WeChatOa&mt=8';
                         break;
                     case 'ko-kr'://iPad韩语版APP Store地址
-                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        theUrl = 'https://itunes.apple.com/app/apple-store/id1444012539?pt=119070313&ct=WeChatOa&mt=8';
                         break;
                     case 'ja-jp'://iPad日文版APP Store地址
-                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        theUrl = 'https://itunes.apple.com/app/apple-store/id1444012539?pt=119070313&ct=WeChatOa&mt=8';
                         break;
                     default://iPad默认APP Store地址
-                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        theUrl = 'https://itunes.apple.com/app/apple-store/id1444012539?pt=119070313&ct=WeChatOa&mt=8';
                 }
             } else {
-                _czc.push(['_trackEvent', '简听', '下载', 'Other']);
+                _czc.push(['_trackEvent', '未你', '下载', 'Other']);
             }
-
             location.href = theUrl;
         }
-
     </script>
 </body>
 
